--- a/cotacao.html
+++ b/cotacao.html
@@ -108,61 +108,79 @@
     <section>
         <div class="container">
             <div class="row">
-                <div class="col-8 bg-cotacao-formulario">
+                <div class="col-12 bg-cotacao-formulario mx-auto">
                     <h2 class="text-center">Solicitar uma Cotação</h2>
 
-                    <form role="form" class="form-floating row needs-validation" aria-label="Formulario de Cotação">       
+                    <form role="form" class="form-floating row needs-validation" aria-label="Formulario de Cotação">
                         <div class="py-2">
-                            <label for="mystuff" class="form-label label-transporte text-center d-block">Selecione o tipo de Transporte</label>
-                            <select id="mystuff" class="form-select" required aria-required="true">
-                              <option value="opt1">Mudança</option>
-                              <option value="opt2">Transporte de Cargas</option>
+                            <label for="mudanca" class="form-label label-transporte">Selecione o
+                                tipo de Transporte</label>
+                            <select id="mudanca" class="form-select py-3 col-xl-6" required aria-required="true">
+                                <option value="opt1">Mudança</option>
+                                <option value="opt2">Transporte de Cargas</option>
                             </select>
-                        </div>             
-                        <div class="form-floating py-2 col-lg-6 form-group">
-                            <input type="text" class="form-control" id="cidadeOrigem" name="cidadeOrigem" placeholder="Ex.: São Paulo" required aria-required="true" aria-labelledby="cidadeOrigem" aria-hidden="false">
-                            <label for="cidadeOrigem" class="isRequired form-label px-4 py-4">Cidade de Origem</label>
                         </div>
 
-                        <div class="form-floating py-2 col-lg-6 form-group">
-                            <input type="text" class="form-control" id="cidadeFinal" name="cidadeFinal" placeholder="Ex.: Rio de Janeiro" required aria-required="true" aria-labelledby="cidadeFinal" aria-hidden="false">
-                            <label for="cidadeFinal" class="isRequired form-label px-4 py-4">Cidade de Destino</label>
+                        <div class="form-floating py-2 col-xl-6 form-group">
+                            <input type="text" class="form-control" id="cidadeOrigem" name="cidadeOrigem"
+                                placeholder="Ex.: São Paulo" required aria-required="true"
+                                aria-labelledby="cidadeOrigem" aria-hidden="false">
+                            <label for="cidadeOrigem" class="isRequired form-label px-4 py-4"><i class="fas fa-building"></i>Cidade de Origem</label>
+                        </div>
+
+                        <div class="form-floating py-2 col-xl-6 form-group">
+                            <input type="text" class="form-control" id="cidadeFinal" name="cidadeFinal"
+                                placeholder="Ex.: Rio de Janeiro" required aria-required="true"
+                                aria-labelledby="cidadeFinal" aria-hidden="false">
+                            <label for="cidadeFinal" class="isRequired form-label px-4 py-4"><i class="far fa-building"></i>Cidade de Destino</label>
                         </div>
 
                         <div class="container">
-                            <div class="mystaff_hide mystaff_opt1 row">
-                                <div class="form-floating py-2 col-lg-4 form-group">
-                                    <input type="number" class="form-control" id="valorNota" name="valorNota" placeholder="Ex.: 201" required aria-required="true" aria-labelledby="valorNota" aria-hidden="false">
-                                    <label for="valorNota" class="isRequired form-label px-4 py-4">Valor de Nota</label>
+                            <div class="mudanca_hide mudanca_opt1 row">
+                                <div class="form-floating py-2 col-xl-4 form-group">
+                                    <input type="number" class="form-control" id="valorNota" name="valorNota"
+                                        placeholder="Ex.: 201" required aria-required="true" aria-labelledby="valorNota"
+                                        aria-hidden="false">
+                                    <label for="valorNota" class="isRequired form-label px-4 py-4"><i class="fas fa-dollar-sign"></i>Valor de Nota(R$)  </label>
                                 </div>
-                                <div class="form-floating py-2 col-lg-4 form-group">
-                                    <input type="number" class="form-control" id="quantidade"  name="quantidade" placeholder="exemplo@dominio.com.br" required aria-required="true" aria-labelledby="quantidade" aria-hidden="false">
-                                    <label for="quantidade" class="isRequired form-label px-4 py-4">Quantidade</label>
+                                <div class="form-floating py-2 col-xl-4 form-group">
+                                    <input type="number" class="form-control" id="quantidade" name="quantidade"
+                                        placeholder="exemplo@dominio.com.br" required aria-required="true"
+                                        aria-labelledby="quantidade" aria-hidden="false">
+                                    <label for="quantidade" class="isRequired form-label px-4 py-4"><i class="fas fa-dolly-flatbed"></i>Quantidade</label>
                                 </div>
-                                <div class="form-floating py-2 col-lg-4 form-group">
-                                    <input type="number" class="form-control" id="peso" name="peso" placeholder="exemplo@dominio.com.br" required aria-required="true" aria-labelledby="peso" aria-hidden="false">
-                                    <label for="peso" class="isRequired form-label px-4 py-4">Peso</label>
+                                <div class="form-floating py-2 col-xl-4 form-group">
+                                    <input type="number" class="form-control" id="peso" name="peso"
+                                        placeholder="exemplo@dominio.com.br" required aria-required="true"
+                                        aria-labelledby="peso" aria-hidden="false">
+                                    <label for="peso" class="isRequired form-label px-4 py-4"><i class="fas fa-balance-scale"></i>Peso</label>
                                 </div>
                             </div>
                         </div>
 
-                        <div class="form-floating py-2 col-lg-6 form-group">
-                            <input type="text" class="form-control" id="nome"  name="nome" placeholder="Ex.: João Vitor" required aria-required="true" aria-labelledby="nome" aria-hidden="false">
-                            <label for="nome" class="isRequired form-label px-4 py-4">Nome</label>
+                        <div class="form-floating py-2 col-xl-6 form-group">
+                            <input type="text" class="form-control" id="nome" name="nome" placeholder="Ex.: João Vitor"
+                                required aria-required="true" aria-labelledby="nome" aria-hidden="false">
+                            <label for="nome" class="isRequired form-label px-4 py-4"><i class="fas fa-user"></i>Nome</label>
                         </div>
-                        <div class="form-floating py-2 col-lg-6 form-group">
-                            <input type="tel" class="form-control" id="telefone" name="telefone" placeholder="Ex.: 1234-5678" aria-labelledby="telefone" aria-hidden="false">
-                            <label for="telefone" class="form-label px-4 py-4">Telefone</label>
+                        <div class="form-floating py-2 col-xl-6 form-group">
+                            <input type="tel" class="form-control" id="telefone" name="telefone"
+                                placeholder="Ex.: 1234-5678" aria-labelledby="telefone" aria-hidden="false">
+                            <label for="telefone" class="form-label px-4 py-4"><i class="fas fa-phone"></i>Telefone</label>
                         </div>
 
-                        <div class="form-floating py-2 col-lg-12 form-group">
-                            <input type="email" class="form-control" id="email"  name="email" placeholder="exemplo@dominio.com.br" required aria-required="true" aria-labelledby="email" aria-hidden="false">
-                            <label for="email" class="isRequired form-label px-4 py-4">Email</label>
+                        <div class="form-floating py-2 col-xl-12 form-group">
+                            <input type="email" class="form-control" id="email" name="email"
+                                placeholder="exemplo@dominio.com.br" required aria-required="true"
+                                aria-labelledby="email" aria-hidden="false">
+                            <label for="email" class="isRequired form-label px-4 py-4"><i class="fas fa-envelope"></i>Email</label>
                         </div>
 
                         <div class="form-group py-2">
-                            <label for="motivoContato" id="observações" name="observações" aria-labelledby="observações" aria-hidden="false">Observações</label>
-                            <small class="text-muted">(Peso, quantidade de volumes, medidas, valor NF. Caso seja mudança favor enviar a relação dos móveis a serem transportados.)</small>
+                            <label for="motivoContato" id="observações" name="observações" aria-labelledby="observações"
+                                aria-hidden="false">Observações</label>
+                            <small class="text-muted">(Peso, quantidade de volumes, medidas, valor NF. Caso seja mudança
+                                favor enviar a relação dos móveis a serem transportados.)</small>
                             <textarea class="form-control" id="motivoContato" rows="3"></textarea>
                         </div>
 
@@ -172,24 +190,42 @@
                             </button>
                         </div>
                     </form>
-                    
                 </div>
-                <div class="col-4">
-                    <div class="bg-cotacao-comoFunciona">
-                        <h3 class="text-center">Como funciona</h3>
-                        <p class="mx-auto" style="margin-bottom: 16px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae eos cumque aperiam quisquam est error eum nulla deleniti.</p>
-                    </div>
+            </div>
+        </div>
+    </section>
 
-                    <div class="bg-cotacao-empresas">
-                        <h3 class="text-center">Nossas empresas</h3>
+    <section>
+        <div class="container-fluid bg-cotacao-empresas">
+            <div class="container">
+                <div class="col-12">
+                    <h3 class="text-center">Nossas empresas</h3>
+                    <div class="justify-content-around d-flex mx-5">
                         <picture>
-                            <img src="img/posto-alvorada.jpg" alt="Empresas" class="mx-auto d-block img-fluid">
+                            <img src="img/posto-alvorada.jpg" alt="Empresas" class="img-fluid">
+                            <h4 class="text-center">Alvorada</h4>
                         </picture>
                         <picture>
-                            <img src="img/posto-alvorada.jpg" alt="Empresas" class="mx-auto d-block img-fluid">
+                            <img src="img/posto-alvorada.jpg" alt="Empresas" class="img-fluid">
+                            <h4>Alvorada</h4>
                         </picture>
                         <picture>
-                            <img src="img/posto-alvorada.jpg" alt="Empresas" class="mx-auto d-block img-fluid">
+                            <img src="img/posto-alvorada.jpg" alt="Empresas" class="img-fluid">
+                            <h4>Alvorada</h4>
+                        </picture>
+                    </div>
+                    <div class="justify-content-around d-flex mx-5">
+                        <picture>
+                            <img src="img/posto-alvorada.jpg" alt="Empresas" class="img-fluid">
+                            <h4>Alvorada</h4>
+                        </picture>
+                        <picture>
+                            <img src="img/posto-alvorada.jpg" alt="Empresas" class="img-fluid">
+                            <h4>Alvorada</h4>
+                        </picture>
+                        <picture>
+                            <img src="img/posto-alvorada.jpg" alt="Empresas" class="img-fluid">
+                            <h4>Alvorada</h4>
                         </picture>
                     </div>
                 </div>
@@ -197,7 +233,7 @@
         </div>
     </section>
 
-    
+
     <footer>
         <div class="container-fluid bg-footer" style="padding: 0;">
             <div class="container">
