--- a/empresa.html
+++ b/empresa.html
@@ -63,7 +63,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">
+                                <a href="cotacao.html" class="nav-link">
                                     <span class="navItemText">
                                         Cotação de Frete
                                     </span>
